Accept case insensitive enums in JSON

--- a/application.properties
+++ b/application.properties
@@ -10,3 +10,5 @@ spring.datasource.password=sa
 # Spring JPA configuration
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+spring.jackson.mapper.accept_case_insensitive_enums=true
