Optional settings in application.properties

--- a/application.properties
+++ b/application.properties
@@ -12,3 +12,9 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 spring.jackson.mapper.accept_case_insensitive_enums=true
+
+# URL to yaml file can be specified here as well
+# sensors.yaml.url=http://github.com/relayr/pdm-test/blob/master/sensors.yml
+
+# Set profile to dev, e.g., to see SQL in console
+# spring.profiles.active=dev
