Set lock timeout

--- a/application.properties
+++ b/application.properties
@@ -3,7 +3,7 @@
 
 # In memory database configuration
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
+spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1;LOCK_TIMEOUT=60000
 spring.datasource.username=sa
 spring.datasource.password=sa
 
@@ -11,7 +11,7 @@ spring.datasource.password=sa
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
-spring.jackson.mapper.accept_case_insensitive_enums=true
+spring.jackson.mapper.ACCEPT_CASE_INSENSITIVE_ENUMS=true
 
 # URL to yaml file can be specified here as well
 # sensors.yaml.url=http://github.com/relayr/pdm-test/blob/master/sensors.yml
